--- a/style.css
+++ b/style.css
@@ -38,10 +38,6 @@ body {
     margin: 0;
 }
 
-.hidden {
-    display: none;
-}
-
 li {
     list-style-type: none;
 }
@@ -248,7 +244,7 @@ input:focus, textarea:focus, select:focus{
 }
 
 .page{
-    /* display: flex; */
+    display: flex;
     flex-direction: column;
     height: 100%;
 }
@@ -443,4 +439,13 @@ input:focus, textarea:focus, select:focus{
 
 .pop-success{
     background-color: rgb(21, 161, 21);
+}
+
+
+
+
+
+
+.hidden {
+    display: none;
 }
