converted funtions to react part 1

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
     font-family: 'Inter', sans-serif;
 }
 
-body {
+#app {
     display: grid;
     grid-template-columns: 300px 1fr;
     grid-template-areas: 'sidebar content';
