--- a/style.css
+++ b/style.css
@@ -255,7 +255,8 @@ input:focus, textarea:focus, select:focus{
     display: grid;
     padding: 10px;
     grid-template-columns: 400px 1fr;
-    height: 100%;
+    height: 90vh;
+    overflow-y: auto;
 }
 
 .page{
@@ -359,13 +360,12 @@ border: solid 1px white;
     cursor: pointer;
     justify-content: space-between;
     min-height: 50px;
-    border: solid 2px white;
+    border-left: solid 5px white;
 }
 
-.to-do-item:hover{
-    .action-btn{
-        display: block;
-    }
+.to-do-container{
+    max-height:40vh;
+    overflow-y: auto
 }
 
 /* members page styles */
